# pse

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  __init__.py  conftest.py  entrypoint.py  pyproject.toml  pytest.ini  railway.toml  requirements.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_connector.md
.github/workflows/: ci.yml  lint.yml  release.yml
api/: main.py
api/middleware/: auth.py  cors.py  rate_limit.py
api/routes/: fuse.py  health.py  query.py  sources.py
config/: settings.py  sources.yaml
connectors/: base.py  era5.py  global_solar_atlas.py  open_meteo.py  osm.py  sentinel2.py  world_bank.py
docs/: api-reference.md  architecture.md  connectors.md  data-sources.md  deployment.md
examples/: multi_source_fusion.py  quickstart.py
fusion/: engine.py  grid.py  quality.py  temporal.py
query/: engine.py  spatial.py  temporal.py
scheduler/: ingest.py
store/: cache.py  postgres.py  zarr_store.py
tests/pse/: test_base_connector.py  test_fusion_engine.py  test_query_engine.py  test_store_cache.py
tests/pse/test_connectors/: test_era5.py  test_global_solar_atlas.py  test_open_meteo.py  test_osm.py  test_world_bank.py
