[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "northflow-pse"
version = "0.1.0"
description = "Planetary Sensing Engine — domain-agnostic spatiotemporal data fusion for Earth observation"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Tom Danny Pedersen", email = "tdp@northflow.no"},
    {name = "Northflow Technologies AS"},
]
keywords = [
    "earth-observation", "remote-sensing", "climate", "xarray",
    "pangeo", "data-fusion", "satellite", "geospatial", "era5",
    "sentinel-2", "fastapi", "zarr",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "xarray>=2024.10.0",
    "dask[array]>=2024.10.0",
    "zarr>=2.18.0",
    "fsspec>=2024.10.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "pyproj>=3.7.0",
    "rasterio>=1.4.0",
    "h3>=3.7.0",
    "httpx>=0.27.0",
    "cdsapi>=0.7.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "geoalchemy2>=0.15.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "apscheduler>=3.10.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0.0",
    "netcdf4>=1.7.0",
    "s3fs>=2024.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://northflow.no"
Documentation = "https://github.com/northflowlabs/pse/tree/main/docs"
Repository = "https://github.com/northflowlabs/pse"
Issues = "https://github.com/northflowlabs/pse/issues"
Changelog = "https://github.com/northflowlabs/pse/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
# Package root is the repo root; the 'pse' module is the repo directory itself.
# Install with: pip install -e .  (from repo root, adds repo root to sys.path)
include = [
    "**/*.py",
    "**/*.yaml",
    "**/*.yml",
]
exclude = [
    "tests/**",
    "docs/**",
    "examples/**",
    ".github/**",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require network access (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "B904"]
